# web-chat

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
frontend/: index.html  main.js  style.css
web_chat/api/: main.py
web_chat/api/static/: main.js
web_chat/api/templates/: base.html.jinja2  posts.html.jinja2
web_chat/api/utils/: utils.py
web_chat/backend/api/: main.py  models.py
web_chat/backend/db/: models.py  mongo.py
web_chat/db/: mongo.py
web_chat/frontend/: index.html  style.css
web_chat/frontend/js/: classes.js  init.js  main.js  posts.js  utils.js
